# cargo-feature-analyzer

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  analysis.toml  crates.txt  docker-compose.yml  example.sh  flat.uvl  test.uvl  tokio.dot  tokio.uvl  tokio_old.dot  validate_uvl.sh
analysis/: Cargo.toml
analysis/src/: args.rs  bounding_box.rs  config.rs  correlation.rs  crates.rs  csv.rs  feature_model.rs  flamapy.rs  flamapy_client.rs  flamapy_server.py  lib.rs  main.rs  paths.rs  plot.rs  plots.rs  plots_new.rs  result.rs  retry.rs  tables.rs
analysis/src/plot/: bounding_box.rs  box_plot.rs  cross_tree_constraints.rs  declared_vs_fca.rs  default_configs.rs  feature_stats.rs  features_and_dependencies.rs  line_chart.rs  line_count_and_features.rs  unique_configs.rs
analysis/src/result/: configuration_stats.rs  feature_stats.rs  line_count.rs  model_stats.rs  satisfiability.rs
cargo-features/: Cargo.toml
cargo-features/src/: cargo_toml.rs  cli.rs  crates_io.rs  flamapy.rs  main.rs
cargo-toml/: Cargo.toml
cargo-toml-scraper/: Cargo.toml
cargo-toml-scraper/src/: lib.rs
cargo-toml/src/: crate_id.rs  feature_dependencies.rs  lib.rs  main.rs  toml_util.rs
configuration/: Cargo.toml
configuration-scraper/: Cargo.toml
configuration-scraper/src/: configuration.rs  lib.rs  main.rs  query.sql
configuration/src/: directed_graph.rs  feature_dependencies.rs  feature_dependencies_old.rs  lib.rs  toml_util.rs
configurations/: tokio.toml
configurations/clap/: alacritty-(1).csvconf  bio-types-(1).csvconf  cab-(1).csvconf  cargo-(1).csvconf  cargo-binutils-(1).csvconf  cargo-c-(1).csvconf  cargo-expand-(1).csvconf  cargo-release-(1).csvconf  cargo-update-(1).csvconf  clap-verbosity-flag-(2).csvconf  criterion-(1).csvconf  diesel_cli-(1).csvconf  forc-util-(1).csvconf  fuser-(1).csvconf  git-disjoint-(1).csvconf  git2-(1).csvconf  gitui-(1).csvconf  grcov-(1).csvconf  grpc-build.toml  httm-(1).csvconf  httpmock-(1).csvconf  hyperfine-(1).csvconf  just-(1).csvconf  keycloak-(1).csvconf  parse-size-(1).csvconf  parse-size.toml  pastel-(1).csvconf  pb-rs-(1).csvconf  py-spy-(1).csvconf  rav1e-(1).csvconf  rustfilt-(1).csvconf  skim-(1).csvconf  starship-(1).csvconf  structopt-(1).csvconf
configurations/e_commerce/: v1.csvconf  v2.csvconf  v3.csvconf  v4.csvconf  v5.csvconf  v6.csvconf  v7.csvconf  v8.csvconf
configurations/hashbrown/: bevy_platform-0.17.0-rc.1.csvconf  bevy_reflect-0.17.1.csvconf  dom_finder-0.5.0.csvconf  dom_query-0.22.0.csvconf  httm-0.48.6.csvconf  jj-lib-0.34.0.csvconf  lox-orbits-0.1.0-alpha.20.csvconf  malachite-base-0.7.0.csvconf  obelisk-0.25.1.csvconf  oxc_allocator-0.88.0.csvconf  parry3d-0.24.0.csvconf  serde_with-3.15.0.csvconf  torsh-nn-0.1.0-alpha.1.csvconf  tracexec-0.13.1.csvconf  wgpu-info-27.0.0.csvconf  zng-ext-font-0.9.0.csvconf  zng-unique-id-0.8.0.csvconf
configurations/hyper/: alloy-transport-http-1.0.35.csvconf  axum-proxy-0.6.0.csvconf  botapi-0.0.67.csvconf  cdk-lnd-0.13.1.csvconf  covet-2.0.1.csvconf  dragonfly-client-core-1.0.16.csvconf  garage_api_admin-2.1.0.csvconf  hive-apollo-router-plugin-2.1.3.csvconf  hyli-net-0.14.0-rc2.csvconf  kftray-portforward-0.26.3.csvconf  lavalink-rs-0.14.2.csvconf  libdav-0.9.4.csvconf  modbot-0.7.1.csvconf  pmat-2.77.0.csvconf  pyth-lazer-agent-0.5.1.csvconf  rat_engine-1.0.4.csvconf  tonic-0.14.2.csvconf  uxum-0.9.0.csvconf  via-2.0.0-rc.46.csvconf  volo-grpc-0.11.7.csvconf  yellowstone-fumarole-cli-0.1.1+solana.2.csvconf
configurations/nom/: huginn-net-1.4.2.csvconf  libreauth-0.18.1.csvconf  markdown-ppp-2.4.1.csvconf  syd-3.37.8.csvconf
configurations/random/: config_1.csvconf  config_10.csvconf  config_100.csvconf  config_11.csvconf  (+96 more)
crate-scraper/: Cargo.toml
crate-scraper/src/: crate_data.rs  crate_entry.rs  download_limit.sql  lib.rs  main.rs  popular_by_configurations.sql  popular_by_downloads.sql
crate-util/: Cargo.toml
data/: crates.txt
docker/: Dockerfile  build.sh  download.sh  import.sh  import.sql  schema.sql  start.sh
feature-configuration-postgres/: Cargo.toml
feature-configuration-postgres/src/: main.rs  query.sql
feature-configuration-scraper/: Cargo.toml
feature-configuration-scraper/example-configurations/: basket.toml  catalouge.toml  check.toml  credit_card.toml  e_commerce.toml  grid.toml  list.toml  payment_method.toml  v1.toml  v2.toml  v3.toml  v4.toml  v5.toml  v6.toml  v7.toml  v8.toml
feature-configuration-scraper/src/: main.rs  main2.rs
feature-model/: Cargo.toml
feature-model-generator/: Cargo.toml  tokio.uvl  tokio.uvl.old
feature-model-generator-milp/: Cargo.toml
feature-model-generator-milp/src/: main.rs  milp.rs  util.rs
feature-model-generator/examples/toml/: example.toml
feature-model-generator/src/: concept.rs  configuration.rs  dependency.rs  directed_graph.rs  feature_configuration.rs  feature_dependencies.rs  main.rs  max_tree.rs  pre_order.rs  uvl.rs
flat-feature-model/: Cargo.toml
flat-feature-model/src/: main.rs
fm-synthesizer-fca/: Cargo.toml
fm-synthesizer-fca/src/: binomial.rs  concept.rs  feature_model.rs  lib.rs  main.rs  min_max.rs  optimal_groups.rs  synthesizer.rs  tree_constraints.rs  uvl.rs  uvl_rng.rs  uvl_writer.rs
fm-synthesizer-fca/src/tree_constraints/: dfs.rs  max_depth.rs  rng.rs
fm-synthesizer-flat/: Cargo.toml
fm-synthesizer-flat/src/: lib.rs  main.rs
fm-synthesizer-milp/: Cargo.toml
fm-synthesizer-milp/src/: main.rs
models/: clap.acposet.dot  clap.uvl  hashbrown-flat.uvl  hashbrown.uvl  hyper-flat.uvl  hyper.uvl  nom-flat.uvl  nom.uvl  random.acposet.dot  random.uvl  serde.acposet.dot  serde.uvl  serde_json.acposet.dot  serde_json.uvl  syn.acposet.dot  syn.uvl  tokio.acposet.dot  tokio.uvl  tokio_db_dump.uvl  url-flat.uvl  wasi-flat.uvl  wasi.uvl  winnow-flat.uvl  winnow.uvl
scripts/: analyze.sh  analyze_all.sh  generate.sh  scrape.sh  synthesize_test.sh  validate.sh
src/: dependency.rs  example.rs  example.toml  feature_dependencies.rs  main.rs  max_tree.rs  output_comparison.txt  pre_order.rs  tokio.toml  uvl.rs
uvl_converter/: Cargo.toml
(+1309 files in other folders)
