[package]
name = "analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
cargo-toml = { version = "0.1.0", path = "../cargo-toml" }
clap = { version = "4.5.51", features = ["derive"] }
configuration-scraper = { version = "0.1.0", path = "../configuration-scraper" }
fm-synthesizer-flat = { version = "0.1.0", path = "../fm-synthesizer-flat" }
semver = "1.0.27"
thiserror = "2.0.17"
toml = "0.9.8"
