[package]
name = "analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
cargo-toml = { version = "0.1.0", path = "../cargo-toml" }
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
configuration-scraper = { version = "0.1.0", path = "../configuration-scraper" }
crate-scraper = { version = "0.1.0", path = "../crate-scraper" }
derive-new = "0.7.0"
fm-synthesizer-fca = { version = "1.0.1", path = "../fm-synthesizer-fca" }
fm-synthesizer-flat = { version = "0.1.0", path = "../fm-synthesizer-flat" }
itertools = "0.14.0"
ordered-float = "5.1.0"
plotters = "0.3.7"
semver = "1.0.27"
sorted-iter = "0.1.11"
thiserror = "2.0.17"
toml = "0.9.8"
which = "8.0.0"
