[package]
name = "analysis"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "plots"
path = "src/plots_new.rs"

[[bin]]
name = "analysis"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
crate-util = { version = "0.1.0", path = "../crate-util" }
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
configuration-scraper = { version = "0.1.0", path = "../configuration-scraper" }
crate-scraper = { version = "0.1.0", path = "../crate-scraper" }
derive-new = "0.7.0"
fm-synthesizer-fca = { version = "1.0.1", path = "../fm-synthesizer-fca" }
fm-synthesizer-flat = { version = "0.1.0", path = "../fm-synthesizer-flat" }
itertools = "0.14.0"
ordered-float = "5.1.0"
petgraph = "0.8.3"
plotters = "0.3.7"
polyfit-rs = "0.2.2"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["blocking"] }
semver = "1.0.27"
sorted-iter = "0.1.11"
tempfile = "3.24.0"
thiserror = "2.0.17"
tokei = "14.0.0"
toml = "0.9.8"
which = "8.0.0"
feature-model = { version = "0.1.0", path = "../feature-model" }
nameof = "1.3.0"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
box-plotters = "0.1.0"
