[package]
name = "cargo-toml-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
crates_io_api = "0.12.0"
crates_tools = "0.19.0"
itertools = "0.14.0"
semver = "1.0.27"
thiserror = "2.0.17"

[dev-dependencies]
tokio = { version = "^1", features = ["full"] }
