[package]
name = "cargo-toml"
version = "0.1.0"
edition = "2024"

[lib]
name = "cargo_toml"
path = "src/lib.rs"

[[bin]]
name = "cargo_toml_bin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
crates_io_api = "0.12.0"
flate2 = "1.1.5"
itertools = "0.14.0"
petgraph = "0.8.3"
reqwest = { version = "0.13.1", features = ["blocking"] }
semver = "1.0.27"
tar = "0.4.44"
thiserror = "2.0.17"
toml = "0.9.8"

[dev-dependencies]
tokio = { version = "^1", features = ["full"] }
