[package]
name = "configuration-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo-toml = { version = "0.1.0", path = "../cargo-toml" }
clap = { version = "4.5.48", features = ["derive"] }
configuration = { version = "1.0.1", path = "../configuration" }
itertools = "0.14.0"
petgraph = "0.8.3"
postgres = "0.19.12"
semver = "1.0.27"
thiserror = "2.0.17"
toml = "0.9.7"

[lib]
name = "configuration_scraper"
path = "src/lib.rs"

[[bin]]
name = "configuration_scraper_bin"
path = "src/main.rs"
