[package]
name = "feature-configuration-postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo-toml-scraper = { version = "0.1.0", path = "../cargo-toml-scraper" }
clap = { version = "4.5.48", features = ["derive"] }
configuration = { version = "1.0.1", path = "../configuration" }
semver = "1.0.27"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = "0.7.15"
toml = "0.9.7"
