[package]
name = "feature-model-generator-milp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
configuration = { version = "1.0.1", path = "../configuration" }
good_lp = { version = "1.14.0", features = ["scip"] }
itertools = "0.14.0"
petgraph = "0.8.3"
walkdir = "2.5.0"
