[package]
name = "feature-model-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
derive-new = "0.7.0"
itertools = "0.14.0"
petgraph = "0.8.1"
thiserror = "2.0.12"
toml = "0.8.20"
tree-sitter = "0.25.3"
tree-sitter-rust = "0.23.2"
walkdir = "2.5.0"
