[package]
name = "feature-model-generator"
version = "1.0.1"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
clap = { version = "4.5.37", features = ["derive"] }
configuration = { version = "1.0.0", path = "../configuration" }
derive-new = "0.7.0"
itertools = "0.14.0"
petgraph = "0.8.1"
thiserror = "2.0.12"
toml = { version = "0.8.20", features = ["preserve_order"] }
walkdir = "2.5.0"
