[package]
name = "fm-synthesizer-fca"
version = "1.0.1"
edition = "2021"

[lib]
name = "fm_synthesizer_fca"
path = "src/lib.rs"

[[bin]]
name = "fm_synthesizer_fca_bin"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
cargo-toml = { version = "0.1.0", path = "../cargo-toml" }
clap = { version = "4.5.37", features = ["derive"] }
configuration-scraper = { version = "0.1.0", path = "../configuration-scraper" }
derive-new = "0.7.0"
itertools = "0.14.0"
petgraph = "0.8.1"
thiserror = "2.0.12"
toml = { version = "0.8.20", features = ["preserve_order"] }
walkdir = "2.5.0"
