[package]
name = "fm-synthesizer-flat"
version = "0.1.0"
edition = "2024"

[lib]
name = "fm_synthesizer_flat"
path = "src/lib.rs"

[[bin]]
name = "fm_synthesizer_flat_bin"
path = "src/main.rs"

[dependencies]
cargo-toml = { version = "0.1.0", path = "../cargo-toml" }
clap = { version = "4.5.47", features = ["derive"] }
configuration = { version = "1.0.1", path = "../configuration" }
itertools = "0.14.0"
petgraph = "0.8.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.6"
