[package]
name = "fm-synthesizer-milp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
good_lp = { version = "1.14.0", features = ["scip"] }
crate-util = { version = "0.1.0", path = "../crate-util" }
configuration-scraper = { version = "0.1.0", path = "../configuration-scraper" }
itertools = "0.14.0"
petgraph = "0.8.3"
walkdir = "2.5.0"
anyhow = "1.0.100"
